--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 }
 
 .btn {
-    background-color: #30B868;
+    background: #30B868;
     border: none;
     padding: 12px 16px;
     font-size: 16px;
@@ -27,11 +27,16 @@
     font-weight: 600;
     border-radius: 4px;
 
+
+}
+.btn :hover{
+    background: #F95555;
+    cursor: pointer;
 }
 
 /* Main style  */
 header{
-    background-color:#c52e2e;
+    background-color:#ffffff;
     /* padding-top: 34px; */
 }
 
@@ -144,12 +149,17 @@ section .hero-last-button{
     margin: 0 auto;
     text-align: center;
     display: flex;
-    gap: 24px;
+    gap: 24px
+    
     
 }
 
 .knowledge-box .knowledge-card{
-    box-shadow: 0 6px 8px 0 #0000002b;
+    padding-top: 69px;
+    border-radius: 8px;
+    box-shadow: -8px -8px 12px rgba(0, 0, 0, 0.078),
+                8px -8px 12px rgba(0, 0, 0, 0.071);
+
     
     
 }
@@ -173,3 +183,45 @@ padding: 5px;
     color: #627382;
     line-height: 20px;
 }
+
+
+/* second brain part */
+.brain-2nd {
+    width: 1360px;
+    max-width: 1600px;
+    margin: 0 auto;
+    
+    
+}
+
+.brain-text{
+    
+}
+
+
+
+
+/* last part  */
+.last-text{
+    width: 1360px;
+    max-width: 1600px;
+    margin: 0 auto;
+    text-align: center; 
+    background-color: #F7F6F2; 
+
+}
+
+.last-text h2{
+    padding-top: 80px;
+    font-weight: 700;
+    
+}
+.last-text p{
+    padding-top: 16px;
+    color: #627382;
+    font-weight: 400;
+}
+ .last-text .btn{
+    color: #FFFFFF;
+    padding-top: 10px;
+ }
