--- a/css/style.css
+++ b/css/style.css
@@ -220,8 +220,48 @@ padding: 5px;
     padding-top: 16px;
     color: #627382;
     font-weight: 400;
+    padding-bottom: 80px;
 }
  .last-text .btn{
     color: #FFFFFF;
     padding-top: 10px;
  }
+
+
+
+
+ /* footer bar  */
+
+ footer{
+    background-color: #001931;
+    
+ }
+
+ footer .footer-main{
+    width: 1360px;
+    max-width: 1600px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 120px 120px 80px;
+    text-align: center;
+
+ }
+  .footer-social p {
+    color: #FFFFFF;
+    font-weight: 400;
+    padding-bottom: 2px;
+    
+  }
+
+  .footer-social i{
+    color: #FFFFFF;
+    
+  }
+
+  .copy{
+    
+    text-align: center;
+    color:#FFFFFF;
+    padding-bottom: 30px;
+  }
